# ai-code-stack

./: .gitignore  .gitmodules  AGENTS.md  AI Code Stack Kur.bat  AI Code Stack Kur.command  CLAUDE.md  README.md  global-install.sh  install.sh  pyproject.toml  replace-skills.sh  verify.sh
ai_code_stack/: __init__.py  adapters.py  cli.py  filesystem.py  frontmatter.py  global_install.py  installer.py  inventory.py  manifests.py  platforms.py  replace_skills.py  result.py  security_gate.py  verifier.py
config/: AGENTS.md  apply-overrides.mjs  configure-codex.mjs  cybersecurity-skills.allowlist  security-release-gate.sh
docs/: SESSION-CHECKPOINT.md
manifests/: cache-state.json  capabilities.json  checksums.json  knowledge-registry.json  links.json  platforms.json  repositories.json  roles.json  skill-routing.json  skills.json  token-costs.json
orchestration/: ORCHESTRATION.md  PLATFORM-CAPABILITIES.md  PRECEDENCE.md  RELEASE-GATE.md  ROUTING.md  SECURITY.md
overlays/: README.md
policies/: cache.yaml  caveman.yaml  context-efficiency.yaml  execution-budget.yaml  graphify-routing.yaml  knowledge-registry.yaml  routing.yaml  runtime.yaml  security.yaml  skill-loading.yaml
scripts/: build-adapters.ps1  build_adapters.py  build_manifests.py  global-install.ps1  global_install.py  install.ps1  install.py  replace-skills.ps1  replace_skills.py  rollback.ps1  rollback.py  verify.ps1  verify.py
tests/: conftest.py  test_execution_budget.py  test_filesystem.py  test_frontmatter.py  test_global_install.py  test_installer_and_adapters.py  test_registry.py  (+2 more)
(+91 files in other folders)
