[project]
name = "ai-code-stack"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.scripts]
ai-code-stack = "ai_code_stack.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ai_code_stack*"]
